; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_process_user_online_lite.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_process_user_online_lite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_online_lite = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @process_user_online_lite(%struct.lev_online_lite* %0) #0 {
  %2 = alloca %struct.lev_online_lite*, align 8
  %3 = alloca i32*, align 8
  store %struct.lev_online_lite* %0, %struct.lev_online_lite** %2, align 8
  %4 = load %struct.lev_online_lite*, %struct.lev_online_lite** %2, align 8
  %5 = getelementptr inbounds %struct.lev_online_lite, %struct.lev_online_lite* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i32* @get_user(i32 %6)
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @account_user_online(i32* %11)
  br label %13

13:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32* @get_user(i32) #1

declare dso_local i32 @account_user_online(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
